[Update] signup/login #8

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,7 +32,7 @@ en:
         contact: "Contact"
         company: "Company"
         action: "Extracurricular Activities"
-        help: "Need Help?"
+        help: "Do you need advice?"
         service: "Exciting Services"
         search: "What are you looking for..."
       footer:
