--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -63,3 +63,131 @@ en:
       not_saved:
         one: "1 error prohibited this %{resource} from being saved:"
         other: "%{count} errors prohibited this %{resource} from being saved:"
+
+vi:
+  devise:
+    confirmations:
+      confirmed: "Địa chỉ email của bạn đã được xác nhận thành công."
+      send_instructions: "Bạn sẽ nhận được một email hướng dẫn về cách xác nhận địa chỉ email của bạn trong vài phút."
+      send_paranoid_instructions: "Nếu địa chỉ email của bạn tồn tại trong cơ sở dữ liệu của chúng tôi, bạn sẽ nhận được một email hướng dẫn về cách xác nhận địa chỉ email của bạn trong vài phút."
+    failure:
+      already_authenticated: "Bạn đã đăng nhập rồi."
+      inactive: "Tài khoản của bạn chưa được kích hoạt."
+      invalid: "Thông tin đăng nhập (%{authentication_keys}) hoặc mật khẩu không hợp lệ."
+      locked: "Tài khoản của bạn đã bị khóa."
+      last_attempt: "Bạn có một lần thử lại trước khi tài khoản bị khóa."
+      not_found_in_database: "Thông tin đăng nhập (%{authentication_keys}) hoặc mật khẩu không hợp lệ."
+      timeout: "Phiên của bạn đã hết hạn. Vui lòng đăng nhập lại để tiếp tục."
+      unauthenticated: "Bạn cần đăng nhập hoặc đăng ký trước khi tiếp tục."
+      unconfirmed: "Bạn cần phải xác nhận địa chỉ email của mình trước khi tiếp tục."
+    mailer:
+      confirmation_instructions:
+        subject: "Hướng dẫn xác nhận"
+      reset_password_instructions:
+        subject: "Hướng dẫn đặt lại mật khẩu"
+      unlock_instructions:
+        subject: "Hướng dẫn mở khóa"
+      email_changed:
+        subject: "Email đã thay đổi"
+      password_change:
+        subject: "Mật khẩu đã thay đổi"
+    omniauth_callbacks:
+      failure: "Không thể xác thực từ %{kind} vì \"%{reason}\"."
+      success: "Đã xác thực thành công từ tài khoản %{kind}."
+    passwords:
+      no_token: "Bạn không thể truy cập trang này nếu không có từ email đặt lại mật khẩu. Nếu bạn đến từ email đặt lại mật khẩu, hãy đảm bảo rằng bạn đã sử dụng đầy đủ URL được cung cấp."
+      send_instructions: "Bạn sẽ nhận được một email hướng dẫn về cách đặt lại mật khẩu trong vài phút."
+      send_paranoid_instructions: "Nếu địa chỉ email của bạn tồn tại trong cơ sở dữ liệu của chúng tôi, bạn sẽ nhận được một liên kết đặt lại mật khẩu qua email trong vài phút."
+      updated: "Mật khẩu của bạn đã được thay đổi thành công. Bây giờ bạn đã đăng nhập."
+      updated_not_active: "Mật khẩu của bạn đã được thay đổi thành công."
+    registrations:
+      destroyed: "Tạm biệt! Tài khoản của bạn đã được hủy thành công. Hy vọng gặp lại bạn sớm."
+      signed_up: "Chào mừng! Bạn đã đăng ký thành công."
+      signed_up_but_inactive: "Bạn đã đăng ký thành công. Tuy nhiên, chúng tôi không thể đăng nhập bạn vì tài khoản của bạn chưa được kích hoạt."
+      signed_up_but_locked: "Bạn đã đăng ký thành công. Tuy nhiên, chúng tôi không thể đăng nhập bạn vì tài khoản của bạn đã bị khóa."
+      signed_up_but_unconfirmed: "Một tin nhắn chứa liên kết xác nhận đã được gửi đến địa chỉ email của bạn. Vui lòng làm theo liên kết để kích hoạt tài khoản của bạn."
+      update_needs_confirmation: "Bạn đã cập nhật tài khoản thành công, nhưng chúng tôi cần xác minh địa chỉ email mới của bạn. Vui lòng kiểm tra email của bạn và làm theo liên kết xác nhận để xác nhận địa chỉ email mới của bạn."
+      updated: "Tài khoản của bạn đã được cập nhật thành công."
+      updated_but_not_signed_in: "Tài khoản của bạn đã được cập nhật thành công, nhưng do mật khẩu của bạn đã được thay đổi, bạn cần đăng nhập lại."
+    sessions:
+      signed_in: "Đăng nhập thành công."
+      signed_out: "Đăng xuất thành công."
+      already_signed_out: "Đã đăng xuất thành công."
+    unlocks:
+      send_instructions: "Bạn sẽ nhận được một email hướng dẫn về cách mở khóa tài khoản của bạn trong vài phút."
+      send_paranoid_instructions: "Nếu tài khoản của bạn tồn tại, bạn sẽ nhận được một email hướng dẫn về cách mở khóa trong vài phút."
+      unlocked: "Tài khoản của bạn đã được mở khóa thành công. Vui lòng đăng nhập để tiếp tục."
+  errors:
+    messages:
+      already_confirmed: "đã được xác nhận trước đó, vui lòng thử đăng nhập"
+      confirmation_period_expired: "phải được xác nhận trong vòng %{period}, vui lòng yêu cầu lại"
+      expired: "đã hết hạn, vui lòng yêu cầu lại"
+      not_found: "không tìm thấy"
+      not_locked: "không bị khóa"
+      not_saved:
+        one: "Có 1 lỗi đã ngăn cản %{resource} này từ việc được lưu:"
+        other: "Có %{count} lỗi đã ngăn cản %{resource} này từ việc được lưu:"
+
+ja:
+  devise:
+    confirmations:
+      confirmed: "メールアドレスが正常に確認されました。"
+      send_instructions: "数分以内にメールでメールアドレス確認の手順が届きます。"
+      send_paranoid_instructions: "データベースにあなたのメールアドレスが存在する場合、数分以内にメールでメールアドレス確認の手順が届きます。"
+    failure:
+      already_authenticated: "既にログインしています。"
+      inactive: "アカウントはまだアクティブ化されていません。"
+      invalid: "無効な %{authentication_keys} またはパスワードです。"
+      locked: "アカウントがロックされています。"
+      last_attempt: "アカウントがロックされる前にもう一度試行できます。"
+      not_found_in_database: "無効な %{authentication_keys} またはパスワードです。"
+      timeout: "セッションがタイムアウトしました。続行するには再度サインインしてください。"
+      unauthenticated: "続行する前にサインインまたはサインアップする必要があります。"
+      unconfirmed: "続行する前にメールアドレスの確認が必要です。"
+    mailer:
+      confirmation_instructions:
+        subject: "確認手順"
+      reset_password_instructions:
+        subject: "パスワードリセット手順"
+      unlock_instructions:
+        subject: "アカウントロック解除手順"
+      email_changed:
+        subject: "メールアドレス変更"
+      password_change:
+        subject: "パスワード変更"
+    omniauth_callbacks:
+      failure: "%{kind} からの認証に失敗しました。理由: \"%{reason}\"。"
+      success: "%{kind} アカウントからの認証に成功しました。"
+    passwords:
+      no_token: "パスワードリセット用のメールからのアクセスが必要です。リセット用のメールから来た場合は、提供された完全なURLを使用していることを確認してください。"
+      send_instructions: "数分以内にパスワードリセット手順が記載されたメールが届きます。"
+      send_paranoid_instructions: "データベースにあなたのメールアドレスが存在する場合、数分以内にパスワードリセットリンクが送信されます。"
+      updated: "パスワードが正常に変更されました。現在、サインインしています。"
+      updated_not_active: "パスワードが正常に変更されました。"
+    registrations:
+      destroyed: "さようなら！ アカウントは正常にキャンセルされました。またのご利用をお待ちしております。"
+      signed_up: "ようこそ！ 正常にサインアップしました。"
+      signed_up_but_inactive: "サインアップは正常に完了しましたが、アカウントがまだアクティブ化されていないため、サインインできませんでした。"
+      signed_up_but_locked: "サインアップは正常に完了しましたが、アカウントがロックされているため、サインインできませんでした。"
+      signed_up_but_unconfirmed: "確認リンクが含まれたメッセージがあなたのメールアドレスに送信されました。リンクに従ってアカウントを有効にしてください。"
+      update_needs_confirmation: "アカウントを正常に更新しましたが、新しいメールアドレスを確認する必要があります。メールを確認し、確認リンクに従ってください。"
+      updated: "アカウントが正常に更新されました。"
+      updated_but_not_signed_in: "アカウントが正常に更新されましたが、パスワードが変更されたため、再度サインインする必要があります。"
+    sessions:
+      signed_in: "正常にサインインしました。"
+      signed_out: "正常にサインアウトしました。"
+      already_signed_out: "正常にサインアウトしました。"
+    unlocks:
+      send_instructions: "数分以内にアカウントロック解除手順が記載されたメールが届きます。"
+      send_paranoid_instructions: "アカウントが存在する場合、数分以内にアカウントのロック解除手順がメールで送信されます。"
+      unlocked: "アカウントが正常にロック解除されました。続行するにはサインインしてください。"
+  errors:
+    messages:
+      already_confirmed: "既に確認されています。サインインしてください。"
+      confirmation_period_expired: "%{period} 以内に確認する必要があります。新しいリクエストをしてください。"
+      expired: "有効期限が切れています。新しいリクエストをしてください。"
+      not_found: "見つかりませんでした。"
+      not_locked: "ロックされていません。"
+      not_saved:
+        one: "この %{resource} を保存できませんでした。エラーが1件発生しました:"
+        other: "この %{resource} を保存できませんでした。%{count} 件のエラーが発生しました:"
