--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -14,7 +14,7 @@ vi:
         too_short: "Tối thiểu %{count} ký tự"
         invalid: "chỉ được chứa chữ cái và khoảng trắng, không chứa ký tự đặc biệt hoặc số"
         email: "Email phải là '@gmail.com'!"
-        must_agree: "Bạn phải đồng ý trước khi gửi."
+        must_agree: "Bạn phải đồng ý trước khi tiếp tục."
 
   pages:
     home:
