--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,6 +56,7 @@ en:
       sign_up: "Sign up"
       log_in: "Log in"
       forgot_password: "Forgot your password?"
+      back_to_home: "Back to home"
       confirmation_instructions_not_received: "Didn't receive confirmation instructions?"
 
   email:
